# repository.libretro

./: .gitignore  README.md  libretro_info_osx.txt
libretro-extract/: CMakeLists.txt  LibretroDLL.cpp  LibretroDLL.h  LibretroEnvironment.cpp  LibretroEnvironment.h  LibretroSettings.cpp  LibretroSettings.h  LibretroString.cpp  LibretroString.h  main.cpp
libretro-extract/addons/gameclient.desmume/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.instancingviewer/resources/: settings.xml
libretro-extract/addons/gameclient.instancingviewer/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.mednafen.ngp/resources/: settings.xml
libretro-extract/addons/gameclient.mednafen.pce.fast/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.mednafen.psx/resources/: settings.xml
libretro-extract/addons/gameclient.mednafen.vb/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.modelviewer.location/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.modelviewer/resources/: settings.xml
libretro-extract/addons/gameclient.picodrive/resources/: settings.xml
libretro-extract/addons/gameclient.scenewalker/resources/: settings.xml
libretro-extract/addons/gameclient.scenewalker/resources/languages/english/: strings.po
libretro-extract/addons/gameclient.snes9x/resources/languages/english/: strings.po
src/: addon.py  addon.template.xml  addon_version.py  addon_xml.py  changelog.py  create_release.py  environment.py  libretro_dll.py  libretro_super.py  (+5 more)
(+403 files in other folders)
